--- a/index.html
+++ b/index.html
@@ -33,28 +33,23 @@
         </header>
 
         <!--Navegador-->
-        <!--Navegador-->
-        <nav class="navegador">
-            <ul class="listaNav">
-                <li class="letraFuerte">
-                    <a href="/index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="/pages/nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="/pages/proyectos.html">Proyectos</a>
-                    <ul class="subMenu">
-                        <li>Edificio A1</li>
-                        <li>Edificio Santa Fe</li>
-                        <li>Casa CV</li>
-                        <li>Casa Cafayate</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="/pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+            </div>
         </nav>
 
         <!--Parte principal-->
@@ -80,15 +75,15 @@
             <div class="lineaDivisoria">        </div>
             
             <!--¿Quiénes somos?-->
-            <h2 class="tituloQuienes">
+            <h2 class="sobreNosotrosTitulo">
                 Sobre Nosotros
             </h2>
-            <div class="textoQuienes">
+            <div class="sobreNosotrosTexto">
                 <h6>
                     Un servicio completo de proyecto de arquitectura
                 </h6>
                 <p class="parrafoUno">
-                    Ubicado en la ciudad de Yerba Buena, en la provincia de Tucumán, MYLE Arquitectura & Desarrollo es un estudio especializado en proyectos de arquitectura, en proyectos ejecutivos, diseños de interiores y desarrollos inmobiliarios.
+                    Ubicado en la ciudad de Yerba Buena, provincia de Tucumán, MYLE Arquitectura & Desarrollo es un estudio especializado en proyectos de arquitectura, en proyectos ejecutivos, diseños de interiores y desarrollos inmobiliarios.
                 </p>
                 <p class="parrafoDos">
                     El estudio está compuesto por un equipo de arquitectos e ingenieros especializados en proyectos de mediana y gran envergadura. La combinación entre juventud y experiencia que caracteriza al estudio genera un resultado grandioso expresado en cada trabajo que se realiza. Con el paso del tiempo el estudio desarrolló diferentes trabajos que permitieron llegar a día de hoy con mas de 20.000 m2 proyectados, algo que hace sentir orgulloso al estudio.
@@ -187,6 +182,6 @@
 
     <!--LINK JS BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
+
 </body>
 </html>
