--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--Link Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <!--Link CSS-->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!--Link fuente-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,39 +28,37 @@
         <!--Encabezado con logo de la marca-->
         <header class="encabezado">
             <a href="/index.html" >
-                <img src="../img/logo-myle.png" alt="MYLE Logo" class="logoMyleNosotros">
+                <img src="../img/logo-myle.png" alt="MYLE Logo" class="logoMyle">
             </a>
         </header>
 
         <!--Navegador-->
-        <nav class="navegador">
-            <ul class="listaNav">
-                <li>
-                    <a href="/index.html">Inicio</a>
-                </li>
-                <li class="letraFuerte">
-                    <a href="/pages/nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="/pages/proyectos.html">Proyectos</a>
-                    <ul class="subMenu">
-                        <li>Edificio A1</li>
-                        <li>Edificio Santa Fe</li>
-                        <li>Casa CV</li>
-                        <li>Casa Cafayate</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="/pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+            </div>
         </nav>
-
-        <!--Elemento divisor - Línea horizontal-->
-        <div class="lineaDivisoriaNosotros">        </div>
 
         <!--Parte principal-->
         <main class="contenidoPrincipalNosotros">
+
+            <!--Logo de WhatsApp-->
+            <a href="wa.me/+543814486426" class="logoWhatsapp">
+                <img src="/img/logo-whatsapp.png" alt="logoWhatsApp">
+            </a>
 
             <!--Títulos principales-->
             <h3 class="tituloNuestro">
@@ -66,6 +67,9 @@
             <h1 class="tituloEquipo">
                 Equipo
             </h1>
+
+            <!--Elemento divisor - Línea horizontal-->
+            <div class="lineaDivisoriaNosotros">        </div>
 
             <!--Participantes del equipo-->
             <div class="participantes">
@@ -76,8 +80,8 @@
                     <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel incidunt non dolorem reiciendis, voluptates cupiditate perspiciatis! Nemo, blanditiis dolore ipsum accusamus odit asperiores cum unde aliquam est itaque, eligendi velit "</p>
                 </div>
 
-                <!--Elemento divisor - Línea horizontal-->
-                <div class="lineaDivisoriaNosotrosDos">        </div>
+            <!--Elemento divisor - Línea horizontal-->
+            <div class="lineaDivisoriaNosotrosDos">        </div>
 
                 <!--Belu-->
                 <div class="cartaBelu">
@@ -86,8 +90,8 @@
                     <p>" Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores quos tenetur, aut iusto consequatur natus corrupti dolorum impedit atque illo culpa fugit accusamus officiis fuga eligendi consequuntur voluptatibus! Aliquid, odit. "</p>
                 </div>
 
-                <!--Elemento divisor - Línea horizontal-->
-                <div class="lineaDivisoriaNosotrosTres">        </div>
+            <!--Elemento divisor - Línea horizontal-->
+            <div class="lineaDivisoriaNosotrosTres">        </div>
 
                 <!--José Luis-->
                 <div class="cartaJl">
@@ -96,8 +100,8 @@
                     <p>" Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum illo aperiam sapiente itaque tempora commodi reprehenderit iure modi eveniet nesciunt numquam nemo voluptas enim, ea qui neque tenetur quaerat. "</p>
                 </div>
 
-                <!--Elemento divisor - Línea horizontal-->
-                <div class="lineaDivisoriaNosotrosCuatro">        </div>
+            <!--Elemento divisor - Línea horizontal-->
+            <div class="lineaDivisoriaNosotrosCuatro">        </div>
 
                 <!--Juan José-->
                 <div class="cartaJj">
@@ -106,16 +110,8 @@
                     <p>" Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste consequuntur blanditiis velit ut voluptatibus reiciendis, fugiat, minima beatae non sint expedita nulla tempora inventore quos. Similique mollitia impedit dolores? Assumenda. "</p>
                 </div>
 
-                <!--Elemento divisor - Línea horizontal-->
-                <div class="lineaDivisoriaNosotrosCinco">        </div>
-
-
-            </div>
-
-            <!--Logo de WhatsApp-->
-            <a href="wa.me/+543814486426" class="logoWhatsapp">
-                <img src="../img/logo-whatsapp.png" alt="logoWhatsApp">
-            </a>
+            <!--Elemento divisor - Línea horizontal-->
+            <div class="lineaDivisoriaNosotrosCinco">        </div>
         </main>
 
         <!--Pie de página-->
@@ -156,5 +152,9 @@
             <h2 class="copyright">Copyright&copy; 2022 designed by <strong>elcape23</strong></h2>
         </footer>
     </div>
+
+    <!--LINK JS BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
 </body>
 </html>
