--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -25,6 +25,24 @@
         <div class="imagenPrincipal">
             <img src="/img/imagen_equipo.jpg" alt="imagenEquipo">
         </div>
+
+        <!-- Imagenes para hover-->
+        <a href="#soli" class="botonSoli">
+            <img class="imagenSoli" src="/img/soli1.png" alt="imagenSoli">
+        </a>
+
+        <a href="#juanjo" class="botonJuanjo">
+            <img class="imagenJuanjo" src="/img/juanjo1.png" alt="imagenJuanjo">
+        </a>
+
+        <a href="#joseLuis" class="botonJoseLuis">
+            <img class="imagenJoseLuis" src="/img/joseluis1.png" alt="imagenJoseLuis">
+        </a>
+
+        <a href="#belu" class="botonBelu">
+            <img class="imagenBelu" src="/img/belu1.png" alt="imagenBelu">
+        </a>
+
         <!--Encabezado con logo de la marca-->
         <header class="encabezado">
             <a href="/index.html" >
@@ -40,13 +58,13 @@
                     <a class="nav-link" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                   </li>
                 </ul>
             </div>
@@ -74,7 +92,7 @@
             <!--Participantes del equipo-->
             <div class="participantes">
                 <!--Soli-->
-                <div class="cartaSoli">
+                <div id="soli" class="cartaSoli">
                     <img src="/img/soli.png" alt="Soli">
                     <h4> <strong>Solana</strong> - Arquitecta, 30 años</h4>
                     <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel incidunt non dolorem reiciendis, voluptates cupiditate perspiciatis! Nemo, blanditiis dolore ipsum accusamus odit asperiores cum unde aliquam est itaque, eligendi velit "</p>
@@ -84,7 +102,7 @@
             <div class="lineaDivisoriaNosotrosDos">        </div>
 
                 <!--Belu-->
-                <div class="cartaBelu">
+                <div id="belu" class="cartaBelu">
                     <img src="/img/belu.png" alt="Belu">
                     <h4> <strong>Belén</strong> - Arquitecta, 29 años</h4>
                     <p>" Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores quos tenetur, aut iusto consequatur natus corrupti dolorum impedit atque illo culpa fugit accusamus officiis fuga eligendi consequuntur voluptatibus! Aliquid, odit. "</p>
@@ -94,7 +112,7 @@
             <div class="lineaDivisoriaNosotrosTres">        </div>
 
                 <!--José Luis-->
-                <div class="cartaJl">
+                <div id="joseLuis" class="cartaJl">
                     <img src="/img/jl.png" alt="JoseLuis">
                     <h4> <strong>José Luis</strong> - Ingeniero, 62 años</h4>
                     <p>" Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum illo aperiam sapiente itaque tempora commodi reprehenderit iure modi eveniet nesciunt numquam nemo voluptas enim, ea qui neque tenetur quaerat. "</p>
@@ -104,7 +122,7 @@
             <div class="lineaDivisoriaNosotrosCuatro">        </div>
 
                 <!--Juan José-->
-                <div class="cartaJj">
+                <div id="juanjo" class="cartaJj">
                     <img src="/img/jj.png" alt="JuanJose">
                     <h4> <strong>Juan José</strong> - Arquitecto, 31 años</h4>
                     <p>" Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste consequuntur blanditiis velit ut voluptatibus reiciendis, fugiat, minima beatae non sint expedita nulla tempora inventore quos. Similique mollitia impedit dolores? Assumenda. "</p>
