--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -63,7 +63,9 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://dm2306files.storage.live.com/y4mAEInHUGtsZScJtlIS_b9iD0rOmBzbJu_j0AupOBqI84bG-RqkHItWb0ayz6ZdwPhD5JK4kNp_SG7F2CPligsJB9G34jUNxoIDymFe3UE3Qq12V7HoSeQClkszi5raz0-ZaWvz7KfNZ9HvMwX0tYbcnuBjvTSwrKN3bqSjiTsnCQGu6eBZvRi957jlhHPgEFM?width=3840&height=2160&cropmode=none" class="d-block w-100  img-fluid" alt="edificioA1">
+                    <a href="/pages/edificioA1.html">
+                        <img src="https://dm2306files.storage.live.com/y4mAEInHUGtsZScJtlIS_b9iD0rOmBzbJu_j0AupOBqI84bG-RqkHItWb0ayz6ZdwPhD5JK4kNp_SG7F2CPligsJB9G34jUNxoIDymFe3UE3Qq12V7HoSeQClkszi5raz0-ZaWvz7KfNZ9HvMwX0tYbcnuBjvTSwrKN3bqSjiTsnCQGu6eBZvRi957jlhHPgEFM?width=3840&height=2160&cropmode=none" class="d-block w-100  img-fluid" alt="edificioA1">
+                    </a>
                 </div>
                 <div class="carousel-item">
                     <img src="https://dm2306files.storage.live.com/y4mIvmtgebs1OJSpGXcjjMC3ywiTd5K8ufmSutDODnYcf49ehdQ2Qva8iZCbKcRCz_MUVvQhDqAHh49Qch21Nu2BheNS6wom89FWQyg23Hb_p3m8163Vp0I_qsQsll9-5tUWs6wxQbrpXAyjj-bs8_Gkvs2e8xNXax4Hf4Z3DY2in-h7EpOJjULnon1ueuoWPOr?width=3840&height=2160&cropmode=none" class="d-block w-100 img-fluid" alt="EdificioSf">
