--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div class="imagenPrincipal">
             <img src="/img/background-index.png" alt="edificioA1">
         </div>
+
+        <!--Imagen principal mobile-->
+        <div class="imagenPrincipalMobile">
+            <img src="/img/background-mobile.png" alt="edificioA1Mobile">
+        </div>
+
         <!--Encabezado con logo de la marca-->
         <header class="encabezado">
             <a href="/index.html" >
@@ -36,18 +42,18 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    </li>
                 </ul>
             </div>
         </nav>
