--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -33,16 +33,16 @@
             <div class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
+                        <a class="nav-link" href="/index.html">Inicio</a>
+                    </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="proyectos.html">Proyectos</a>
-                        </li>
+                    </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                        <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
